interactive finder notebook

--- a/Charfinder.ipynb
+++ b/Charfinder.ipynb
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "tokenize('AAA')"
+    "tokenize('aaa')"
    ]
   },
   {
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "tokenize('AAA-bb')"
+    "tokenize('aaa-BB')"
    ]
   },
   {
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "tokenize('AAA', 'bb-c')"
+    "tokenize('aaa', 'BB-c')"
    ]
   },
   {
@@ -286,54 +286,62 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "def summary(count):\n",
+    "    if count > 1:\n",
+    "        return '{} characters found.'.format(count)\n",
+    "    elif count == 1:\n",
+    "        return '1 character found.'\n",
+    "    else:\n",
+    "        return 'No matching character name.'\n",
+    "    \n",
+    "\n",
+    "def finder():\n",
+    "    while True:\n",
+    "        print('━' * 70)\n",
+    "        query = input('Words to search:')\n",
+    "        if not query:\n",
+    "            break\n",
+    "        count = 0\n",
+    "        for char, name in select(query.split(), lines):\n",
+    "            print('{}\\t{}'.format(char, name))\n",
+    "            count += 1\n",
+    "        print(summary(count))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "?\tQUESTION MARK\n",
-      "¿\tINVERTED QUESTION MARK\n",
-      ";\tGREEK QUESTION MARK\n",
-      "՞\tARMENIAN QUESTION MARK\n",
-      "؟\tARABIC QUESTION MARK\n",
-      "፧\tETHIOPIC QUESTION MARK\n",
-      "᥅\tLIMBU QUESTION MARK\n",
-      "⁇\tDOUBLE QUESTION MARK\n",
-      "⁈\tQUESTION EXCLAMATION MARK\n",
-      "⁉\tEXCLAMATION QUESTION MARK\n",
-      "⍰\tAPL FUNCTIONAL SYMBOL QUAD QUESTION\n",
-      "❓\tBLACK QUESTION MARK ORNAMENT\n",
-      "❔\tWHITE QUESTION MARK ORNAMENT\n",
-      "⩻\tLESS-THAN WITH QUESTION MARK ABOVE\n",
-      "⩼\tGREATER-THAN WITH QUESTION MARK ABOVE\n",
-      "⳺\tCOPTIC OLD NUBIAN DIRECT QUESTION MARK\n",
-      "⳻\tCOPTIC OLD NUBIAN INDIRECT QUESTION MARK\n",
-      "⸮\tREVERSED QUESTION MARK\n",
-      "㉄\tCIRCLED IDEOGRAPH QUESTION\n",
-      "꘏\tVAI QUESTION MARK\n",
-      "꛷\tBAMUM QUESTION MARK\n",
-      "︖\tPRESENTATION FORM FOR VERTICAL QUESTION MARK\n",
-      "﹖\tSMALL QUESTION MARK\n",
-      "？\tFULLWIDTH QUESTION MARK\n",
-      "𑅃\tCHAKMA QUESTION MARK\n",
-      "𞥟\tADLAM INITIAL QUESTION MARK\n",
-      "󠀿\tTAG QUESTION MARK\n"
+      "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n",
+      "Words to search:cat face\n",
+      "🐱\tCAT FACE\n",
+      "😸\tGRINNING CAT FACE WITH SMILING EYES\n",
+      "😹\tCAT FACE WITH TEARS OF JOY\n",
+      "😺\tSMILING CAT FACE WITH OPEN MOUTH\n",
+      "😻\tSMILING CAT FACE WITH HEART-SHAPED EYES\n",
+      "😼\tCAT FACE WITH WRY SMILE\n",
+      "😽\tKISSING CAT FACE WITH CLOSED EYES\n",
+      "😾\tPOUTING CAT FACE\n",
+      "😿\tCRYING CAT FACE\n",
+      "🙀\tWEARY CAT FACE\n",
+      "10 characters found.\n",
+      "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n",
+      "Words to search:\n"
      ]
     }
    ],
    "source": [
-    "for char, name in select(['question'], lines):\n",
-    "    print('{}\\t{}'.format(char, name))"
+    "finder()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
